--- a/4.ANSIBLE/1.PLAYBOOK_APPLY/12.playbook_apply_cluster.yaml
+++ b/4.ANSIBLE/1.PLAYBOOK_APPLY/12.playbook_apply_cluster.yaml
@@ -25,6 +25,21 @@
         state: present
         src: "{{ KOPS_DIR }}/03.cluster_namespace_manifest.yaml"
 
+    - name: Add Helm repository for AWS ALB Ingress Controller
+      command: helm repo add aws-alb-ingress-controller https://github.com/kubernetes-sigs/aws-alb-ingress-controller
+      ignore_errors: yes
+
+    - name: Update Helm repositories
+      command: helm repo update
+
+    - name: Install AWS ALB Ingress Controller using Helm
+      command: >
+        helm upgrade --install aws-alb-ingress-controller aws-alb-ingress-controller/aws-alb-ingress-controller
+        --namespace kube-system
+        --values /path/to/aws-alb-helm-values.yaml
+      args:
+        creates: /path/to/aws-alb-helm-values.yaml
+
     - name: Add Helm repo for NGINX Ingress Controller
       kubernetes.core.helm_repository:
         name: bitnami
@@ -40,7 +55,7 @@
         values_files:
           - "{{ KOPS_DIR }}/04.helm_value_aws_alb_ingress_controller.yaml"
         state: present
-        
+
     - name: Add Helm repo for ArgoCD
       kubernetes.core.helm_repository:
         name: argo-cd
@@ -56,3 +71,16 @@
         values_files:
           - "{{ KOPS_DIR }}/05.helm_value_argocd.yaml"
         state: present
+
+
+# helm install aws-load-balancer-controller eks/aws-load-balancer-controller \
+# -n kube-system \
+# --set clusterName=devkops.calife.co.kr \
+# --set serviceAccount.create=false \
+# --set serviceAccount.name=aws-load-balancer-controller
+
+
+# eksctl utils associate-iam-oidc-provider \
+#     --region ap-northeast-2 \
+#     --cluster devkops.calife.co.kr \
+#     --approve
