--- a/5.KOPS/1.MANIFEST/03.cluster_namespace_manifest.yaml
+++ b/5.KOPS/1.MANIFEST/03.cluster_namespace_manifest.yaml
@@ -2,10 +2,16 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: nginx-ingress-controller
+  name: nginx-ingress
 
 ---
 apiVersion: v1
 kind: Namespace
 metadata:
   name: argocd
+
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: cert-manager
